--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,19 @@ dependencies {
     // Test
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	/**
+	 * Third Parties
+	 */
+	// Youtube Data API
+    /**
+     * uses api-client version 1.x.x according to com.google.api.services.youtube.Youtube
+     */
+	compileOnly 'com.google.api-client:google-api-client:1.35.2'
+    compileOnly 'com.google.apis:google-api-services-oauth2:v2-rev157-1.25.0'
+	compileOnly 'com.google.oauth-client:google-oauth-client-jetty:1.36.0'
+	compileOnly 'com.google.apis:google-api-services-youtube:v3-rev222-1.25.0'
+    implementation 'io.grpc:grpc-context:1.64.0'
 }
 
 tasks.named('bootBuildImage') {
