--- a/build.gradle
+++ b/build.gradle
@@ -56,10 +56,10 @@ dependencies {
     /**
      * uses api-client version 1.x.x according to com.google.api.services.youtube.Youtube
      */
-	compileOnly 'com.google.api-client:google-api-client:1.35.2'
-    compileOnly 'com.google.apis:google-api-services-oauth2:v2-rev157-1.25.0'
-	compileOnly 'com.google.oauth-client:google-oauth-client-jetty:1.36.0'
-	compileOnly 'com.google.apis:google-api-services-youtube:v3-rev222-1.25.0'
+    implementation 'com.google.api-client:google-api-client:1.35.2'
+    implementation 'com.google.apis:google-api-services-oauth2:v2-rev157-1.25.0'
+    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.36.0'
+    implementation 'com.google.apis:google-api-services-youtube:v3-rev222-1.25.0'
     implementation 'io.grpc:grpc-context:1.64.0'
 }
 
